// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-caSCKo izCFtv"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gisBJw iSTxXw"
    >
      <span
        class="sc-cHGsZl iJYQxE"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-dymIpo kVHyJW"
        >
          <span
            class="SVGInline SVGInline--cleaned"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-ksYbfQ fkGZDc"
    />
    <div
      class="sc-kjoXOD jfzElb"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-eqIVtm fCThvF disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-caSCKo izCFtv"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gisBJw iSTxXw"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-ksYbfQ fkGZDc"
    />
    <div
      class="sc-ktHwxA faVsQg slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jDwBTQ dQuCOm remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-gHboQg jXWxsR"
      >
        <div
          class="sc-eHgmQL elkcPT"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-fYiAbW hSTGFp"
      >
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-gHboQg jXWxsR"
      >
        <div
          class="sc-eHgmQL elkcPT"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-fYiAbW hSTGFp"
      >
        <li
          class="sc-emmjRN hNZvdB"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-eerKOB eeKgDN"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-cpmLhU hVFwEb sl-bin"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-eilVRo bSrdRJ"
      >
        <a
          class="sc-jAaTju kYCltg"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-caSCKo izCFtv"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gisBJw iSTxXw"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-ksYbfQ fkGZDc"
    />
    <div
      class="sc-ktHwxA faVsQg slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jDwBTQ dQuCOm remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-gHboQg jXWxsR"
      >
        <div
          class="sc-eHgmQL elkcPT"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-fYiAbW hSTGFp"
      >
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-dUjcNx eNzPva"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-gHboQg eovKiR"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-eilVRo bSrdRJ"
      >
        <a
          class="sc-jAaTju kYCltg"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
